--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
      
       <div style="flex: 1 1 45%; margin-bottom: 30px;">
         <h3 style="color: #581c87;">Say Hello 😊</h3>
-        <form action="https://formspree.io/f/xrbaldlp" method="post">
-          <input type="text" placeholder="Your Name"
+        <form action="https://formspree.io/f/mdkllejy" method="POST">
+          <input type="text" name="name" placeholder="Your Name"
             style="width: 100%; padding: 10px; margin-top: 10px; margin-bottom: 15px; border: none; border-bottom: 2px solid #ccc; background: transparent;">
-          <input type="email" placeholder="Your Email"
+          <input type="email" name="email" placeholder="Your Email"
             style="width: 100%; padding: 10px; margin-bottom: 15px; border: none; border-bottom: 2px solid #ccc; background: transparent;">
-          <textarea placeholder="Your Message" rows="4"
+          <textarea placeholder="Your Message" name="message" rows="4"
             style="width: 100%; padding: 10px; border: none; border-bottom: 2px solid #ccc; background: transparent;"></textarea>
           <button type="submit"
             style="margin-top: 15px; padding: 10px 20px; background-color: #581c87; color: white; border: none; border-radius: 6px; cursor: pointer;">Send
